[package]
name = "claude-code-settings-switcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccss"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dialoguer = "0.11"
similar = "2"
edit = "0.1"
